	- cleanups by Norbert (getAuth moved to chopOff, arguments 'contains' massive cleanup)
	- improved reporting to which addresses we bind (now always mentions
	  IP addresses)
	- added delegation-only feature (thanks to ISC)
	- some Debian fixes
	- pdns_recursor does not try to resolve its own IP addresses anymore
	- pdns_recursor has gained an init.d script
	- sqlite support from 

changes since 2.9.10:
	- pdns_recursor now cleans its cache
	- pdns_recursor writes its pid to disk now (FreeBSD port maintainer)
	- disable-axfr check was reversed (oops)
	- LDAP now supports AXFR and a default TTL
	- some debugging output messed up the working of pdns_control (Mark Bergsma)
	- updates to axfr --help output (Norbert Sendetzky)
	
Changes since 2.9.8:
	- fixed a crash when adding additional records
	- make Notifications jump in front of the queue, allowing for
		speedier updates (suggested by Mark Jeftovic of EasyDNS)

	- gid/uid logging confusion (Dean Mills)
	- DNS TTLs were random values
	- OpenLDAP 2.1 fix
	- Error handling for invalid MX records
	- Better exception handling
	- Rewritten lookup() code                                                     

Changes since 2.9.7:
	- NS queries for zones we are not authoritative about now get their NS
	  records in the authority section
imp	- powerldap.hh doesn't need crypt.h (Richard Arends)
	- can't handle binary labels, print a warning about that
bug	- recursor sometimes did very extended negative caching, sometimes for *days*
	- allow-axfr-ips setting now leads to disabling 
	  AXFR for non-listed addresses.
imp	- added Solaris init.d script
bug	- g* backends now lowercase their records field
	- AIX support
	- removed everybody's favorite warning in zone2ldap.cc
	- added zone2ldap.cc

Changes since 2.9.6:
	* need to do work on ( and ) in zones!
feat	- added local-query-address (Mark Bergsma)
bug	- zone2sql now removes dots in the SOA record
imp	- zone2sql no longer silently tries to read directories